--- a/ros/src/sd_behavior/CMakeLists.txt
+++ b/ros/src/sd_behavior/CMakeLists.txt
@@ -186,6 +186,7 @@ install(PROGRAMS
 
 ## Mark other files for installation (e.g. launch and bag files, etc.)
 install(DIRECTORY
+  config
   launch
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
