--- a/ros/src/sd_navigation/config/r1_move_base.yaml
+++ b/ros/src/sd_navigation/config/r1_move_base.yaml
@@ -1,7 +1,7 @@
 base_global_planner: "global_planner/GlobalPlanner"
 base_local_planner: "base_local_planner/TrajectoryPlannerROS"
 recovery_behaviors: [{name: conservative_reset, type: clear_costmap_recovery/ClearCostmapRecovery}, {name: rotate_recovery, type: rotate_recovery/RotateRecovery}, {name: aggressive_reset, type: clear_costmap_recovery/ClearCostmapRecovery}]
-controller_frequency: 20.0
+controller_frequency: 10.0
 planner_patience: 5.0
 controller_patience: 15.0
 conservative_reset_dist: 3.0
@@ -10,7 +10,7 @@ clearing_rotation_allowed: true
 shutdown_costmaps: false
 oscillation_timeout: 0.0
 oscillation_distance: 0.5
-planner_frequency: 5.0
+#planner_frequency: 5.0
 max_planning_retries: -1
 
 global_costmap:
@@ -60,22 +60,22 @@ GlobalPlanner:
 
 TrajectoryPlannerROS:
   # Robot Configuration Parameters
-  acc_lim_x: 2.5
-  acc_lim_y: 2.5
-  acc_lim_theta: 3.2
+  acc_lim_x: 2.0
+  acc_lim_y: 2.0
+  acc_lim_theta: 9.0
 
-  max_vel_x: 0.45
-  min_vel_x: 0.1
-  max_vel_theta: 1.0
-  min_vel_theta: -1.0
-  min_in_place_vel_theta: 0.4
+  max_vel_x: 1.0
+#  min_vel_x: 0.1
+  max_vel_theta: 6.0
+#  min_vel_theta: -1.0
+#  min_in_place_vel_theta: 0.4
   escape_vel: -0.1
 
   holonomic_robot: true
-  y_vels: [-0.3, -0.1, 0.1, 0.3]
+  y_vels: [-1.0, -0.1, 0.1, 1.0]
 
   # Goal Tolerance Parameters
-  yaw_goal_tolerance: 0.05
+  yaw_goal_tolerance: 0.09 # 5°
   xy_goal_tolerance: 0.10
   latch_xy_goal_tolerance: false
 
