Make snap map inactive for now

--- a/ros/src/sd_localization/config/r1_localization.yaml
+++ b/ros/src/sd_localization/config/r1_localization.yaml
@@ -158,6 +158,8 @@ r1_amcl:
   tf_broadcast: true
 
 r1_snap_map:
+  active: false
+
   odom_frame: "r1/odom"
   laser_frame: "r1/laser_frame"
   base_frame: "r1/base_link"
