Add speed topic for r2

--- a/arduino/platformio.ini
+++ b/arduino/platformio.ini
@@ -4,7 +4,7 @@ platform = atmelavr
 board = uno
 
 ; Build options
-lib_deps = ros_lib Arduino
+lib_deps = Arduino
 
 ; Upload options
 upload_port = /dev/ttyACM0
