Added a timer node working fine (hafta check consistency on the robot) Added the backbone of the Score Display Added parameters to various Elements

--- a/ros/src/sd_behavior/CMakeLists.txt
+++ b/ros/src/sd_behavior/CMakeLists.txt
@@ -26,19 +26,23 @@ include_directories(
 )
 
 add_executable(maintree src/main.cpp)
-target_link_libraries(maintree ${catkin_LIBRARIES} ${BEHAVIOR_TREE_LIBRARY} approachobject_nodes restersurplace_nodes)
+target_link_libraries(maintree ${catkin_LIBRARIES} ${BEHAVIOR_TREE_LIBRARY} approachobject_nodes afficherlescore_nodes)
 
 add_library(approachobject_nodes STATIC src/ApproachObject.cpp)
 target_link_libraries(approachobject_nodes ${catkin_LIBRARIES} ${BEHAVIOR_TREE_LIBRARY})
 target_link_libraries(maintree approachobject_nodes)
 
-add_library(restersurplace_nodes STATIC src/ResterSurPlace.cpp)
-target_link_libraries(restersurplace_nodes ${catkin_LIBRARIES} ${BEHAVIOR_TREE_LIBRARY})
-target_link_libraries(maintree restersurplace_nodes)
+add_library(isnottimeout_nodes STATIC src/IsNotTimeOut.cpp)
+target_link_libraries(isnottimeout_nodes ${catkin_LIBRARIES} ${BEHAVIOR_TREE_LIBRARY})
+target_link_libraries(maintree isnottimeout_nodes)
 
 add_library(robot_sensors_nodes STATIC src/robot_sensors_nodes.cpp)
 target_link_libraries(robot_sensors_nodes ${catkin_LIBRARIES} ${BEHAVIOR_TREE_LIBRARY})
 target_link_libraries(maintree robot_sensors_nodes)
+
+add_library(afficherlescore_nodes STATIC src/AfficherLeScore.cpp)
+target_link_libraries(afficherlescore_nodes ${catkin_LIBRARIES} ${BEHAVIOR_TREE_LIBRARY})
+target_link_libraries(maintree afficherlescore_nodes)
 
 #############
 ## Install ##
