--- a/ros/src/sd_hardware_interface/cfg/PID.cfg
+++ b/ros/src/sd_hardware_interface/cfg/PID.cfg
@@ -5,13 +5,15 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator()
 
+gen.add("velocity_controllers_pid_and_feedforward_coef", double_t, 0, "Feed forward and PID multiplier", 0.0, 0.0, 1)
+
 wheels = ["right", "left", "back"]
 
 for wheel in wheels:
-	gen.add("velocity_controllers_feedforward_" + wheel, double_t, 0, wheel + " - Feed forward gain", 0.0, 0.0, 0.1)
-	gen.add("velocity_controllers_static_friction_" + wheel, double_t, 0, wheel + " - Static friction", 0.0, 0.0, 1.0)
-	gen.add("velocity_controllers_pid_p_" + wheel, double_t, 0, wheel + " - PID - Proportionnal gain", 0.0, 0.0, 0.1)
-	gen.add("velocity_controllers_pid_i_" + wheel, double_t, 0, wheel + " - PID - Integral gain", 0.0, 0.0, 0.1)
-	gen.add("velocity_controllers_pid_d_" + wheel, double_t, 0, wheel + " - PID - Derivative gain", 0.0, 0.0, 0.1)
+	gen.add("velocity_controllers_feedforward_" + wheel, double_t, 0, wheel + " - Feed forward gain", 0.0, 0.0, 1)
+	gen.add("velocity_controllers_static_friction_" + wheel, double_t, 0, wheel + " - Static friction", 0.0, 0.0, 1)
+	gen.add("velocity_controllers_pid_p_" + wheel, double_t, 0, wheel + " - PID - Proportionnal gain", 0.0, 0.0, 1)
+	gen.add("velocity_controllers_pid_i_" + wheel, double_t, 0, wheel + " - PID - Integral gain", 0.0, 0.0, 1)
+	gen.add("velocity_controllers_pid_d_" + wheel, double_t, 0, wheel + " - PID - Derivative gain", 0.0, 0.0, 1)
 
 exit(gen.generate(PACKAGE, "hardware_interface", "PID"))
