--- a/ros/src/sd_hardware_interface/config/r1_hardware_interface.yaml
+++ b/ros/src/sd_hardware_interface/config/r1_hardware_interface.yaml
@@ -43,12 +43,16 @@ hardware_interface:
 
   # As rqt-reconfigure does not support array, direct names 
   # are used for the next parameters:
+  
+  # Coefficient to apply to pid and feedforward gain 
+  # as different robot do not have the same wheel speeds
+  velocity_controllers_pid_and_feedforward_coef: 0.1
 
   # Feedfordward gain (If pwm increases by "pwm_max*velocity_controllers_feedforward_x"
   # the wheel x speed up by 1 rad/s)
-  velocity_controllers_feedforward_right: 0.014
-  velocity_controllers_feedforward_left: 0.014
-  velocity_controllers_feedforward_back: 0.014
+  velocity_controllers_feedforward_right: 0.14
+  velocity_controllers_feedforward_left: 0.14
+  velocity_controllers_feedforward_back: 0.14
 
   # Minimum torque allowing the wheel to turn (percentage of pwm_max)
   velocity_controllers_static_friction_right: 0.2
@@ -56,12 +60,12 @@ hardware_interface:
   velocity_controllers_static_friction_back: 0.2
 
   # PID 
-  velocity_controllers_pid_p_right: 0.006
-  velocity_controllers_pid_p_left: 0.006
-  velocity_controllers_pid_p_back: 0.006
-  velocity_controllers_pid_i_right: 0.006
-  velocity_controllers_pid_i_left: 0.006
-  velocity_controllers_pid_i_back: 0.006
+  velocity_controllers_pid_p_right: 0.06
+  velocity_controllers_pid_p_left: 0.06
+  velocity_controllers_pid_p_back: 0.06
+  velocity_controllers_pid_i_right: 0.06
+  velocity_controllers_pid_i_left: 0.06
+  velocity_controllers_pid_i_back: 0.06
   velocity_controllers_pid_d_right: 0.0
   velocity_controllers_pid_d_left: 0.0
   velocity_controllers_pid_d_back: 0.0
