--- a/ros/src/sd_hardware_interface/package.xml
+++ b/ros/src/sd_hardware_interface/package.xml
@@ -19,6 +19,7 @@
   <depend>control_msgs</depend>
   <depend>urdf</depend>
   <depend>joint_limits_interface</depend>
+  <depend>joint_state_publisher</depend>
   <depend>transmission_interface</depend>
   <depend>control_toolbox</depend>
   <depend>std_msgs</depend>
