Add gripper and move nodes

--- a/ros/src/sd_behavior/CMakeLists.txt
+++ b/ros/src/sd_behavior/CMakeLists.txt
@@ -32,18 +32,14 @@ add_executable(${PROJECT_NAME} src/main.cpp)
 target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${BEHAVIOR_TREE_LIBRARY})
 add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
-# add_library(display_nodes STATIC src/display_nodes.cpp)
-# target_link_libraries(display_nodes ${catkin_LIBRARIES} ${BEHAVIOR_TREE_LIBRARY})
-# target_link_libraries(${PROJECT_NAME} display_nodes)
+add_library(gripper_nodes STATIC src/gripper_nodes.cpp)
+target_link_libraries(gripper_nodes ${catkin_LIBRARIES} ${BEHAVIOR_TREE_LIBRARY})
+target_link_libraries(${PROJECT_NAME} gripper_nodes)
 
-# add_library(gripper_nodes STATIC src/gripper_nodes.cpp)
-# target_link_libraries(gripper_nodes ${catkin_LIBRARIES} ${BEHAVIOR_TREE_LIBRARY})
-# target_link_libraries(${PROJECT_NAME} gripper_nodes)
-
-# add_library(move_nodes STATIC src/move_nodes.cpp)
-# target_link_libraries(move_nodes ${catkin_LIBRARIES} ${BEHAVIOR_TREE_LIBRARY})
-# add_dependencies(move_nodes ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-# target_link_libraries(${PROJECT_NAME} move_nodes)
+add_library(move_nodes STATIC src/move_nodes.cpp)
+target_link_libraries(move_nodes ${catkin_LIBRARIES} ${BEHAVIOR_TREE_LIBRARY})
+add_dependencies(move_nodes ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(${PROJECT_NAME} move_nodes)
 
 add_library(score_nodes STATIC src/score_nodes.cpp)
 target_link_libraries(score_nodes ${catkin_LIBRARIES} ${BEHAVIOR_TREE_LIBRARY})
