--- a/ros/src/sd_behavior/config/r2_behavior.yaml
+++ b/ros/src/sd_behavior/config/r2_behavior.yaml
@@ -6,4 +6,5 @@ purple_x: -0.250
 purple_y: 1.275
 purple_yaw: -1.5708 # -pi/2
 
+bt_move_base_topic: /r2/r2_move_base
 bt_cmd_vel_topic: /r2/auto_cmd_vel
