--- a/ros/src/sd_control/config/r2_control.yaml
+++ b/ros/src/sd_control/config/r2_control.yaml
@@ -1,15 +1,16 @@
 # Publish all joint states -----------------------------------
 joint_state_controller:
   type: joint_state_controller/JointStateController
-  publish_rate: 100
+  publish_rate: 50
   
 mobile_base_controller:
   type        : diff_drive_controller/DiffDriveController
   left_wheel  : 'left_wheel_to_base'
   right_wheel : 'right_wheel_to_base'
-  publish_rate: 50.0               # default: 50
+  publish_rate: 25.0               # default: 50
   publish_cmd: true
-  enable_odom_tf: false
+  enable_odom_tf: false            # TF is publihed by the ukf filter
+  open_loop: false
   
   pose_covariance_diagonal : [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
   twist_covariance_diagonal: [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
