Parameters clean-up and tuning

--- a/ros/src/sd_navigation/config/r1_costmap_common_params.yaml
+++ b/ros/src/sd_navigation/config/r1_costmap_common_params.yaml
@@ -1,9 +1,48 @@
-obstacle_range: 1.0
-raytrace_range: 3.0
-footprint: [[-0.165, -0.035], [-0.165, 0.035], [0.038, 0.165], [0.118, 0.118], [0.118, -0.118], [0.038, -0.165]]
-#robot_radius: ir_of_robot
-transform_tolerance: 0.3
+# Costmap layers (one plugin per layer)
+plugins:
+  - {name: static_map_layer,       type: "costmap_2d::StaticLayer"}
+  - {name: obstacles_layer,        type: "costmap_2d::ObstacleLayer"}
+  - {name: inflation_layer,        type: "costmap_2d::InflationLayer"}
 
+# Use a static map that doesn't change 
+static_map_layer:
+  map_topic: map
+  first_map_only: true
+
+# Obstacle layer 
+obstacles_layer:
+  observation_sources: lidar
+  lidar: {
+    sensor_frame: r1/laser_frame,
+    data_type: LaserScan,
+    topic: /r1/laser/scan_filtered,
+    clearing: true,
+    marking: true
+  }
+  # All obstacle in that range will be marked as obstacle (marking)
+  obstacle_range: 1.0
+
+  # All free space in that range will be marked as free (clearing)
+  raytrace_range: 3.0
+
+# Inflation layer
+# Each non free node is inflated in space
 inflation_layer:
-  cost_scaling_factor: 10.0
-  inflation_radius: 0.2
+  inflation_radius: 0.1
+
+# Robot foot print
+footprint: [[-0.165, -0.035], [-0.165, 0.035], [0.038, 0.165], [0.118, 0.118], [0.118, -0.118], [0.038, -0.165]]
+
+
+
+# Robot base frame
+robot_base_frame: r1/base_link
+
+# The frequency in Hz for the map to be updated.
+update_frequency: 5.0
+
+# The frequency in Hz for the map to be publish display information
+publish_frequency: 2.0
+
+# Specifies the delay in transform (tf) data that is tolerable in seconds
+transform_tolerance: 0.3
