--- a/ros/src/sd_localization/cfg/SnapMap.cfg
+++ b/ros/src/sd_localization/cfg/SnapMap.cfg
@@ -21,6 +21,6 @@ gen.add("angle_change_threshold", double_t, 0, "Minimum angle change that will t
 gen.add("update_age_threshold", double_t, 0, "How long before another, new initial pose will be sent after one was sent (in seconds)", 0.0, 0.0, 100.0)
 gen.add("pose_covariance_trans", double_t, 0, "Translational pose covariance the initial pose gets sent with", 1.5, 0.0, 100.0)
 
-gen.add("debug", bool_t, 0, "Enable debug output", False)
+gen.add("publish_monitoring", bool_t, 0, "Enable monitoring msg publication", False)
 
 exit(gen.generate(PACKAGE, "sd_localization", "SnapMap"))
