--- a/ros/src/sd_sensor/config/r2_sensor_config.yaml
+++ b/ros/src/sd_sensor/config/r2_sensor_config.yaml
@@ -3,6 +3,5 @@ r2_laser_scan_filter:
     - name: bounds_repeat
       type: sd_sensor/LaserScanAngularBoundsListFilter
       params:
-        box_frame: r2/base_link
-        angles: [[0.0, 0.8], [2.34, 3.94], [5.48, 6.29]]
-        angles2: [[0.0, 0.8], [2.34, 3.94], [5.48, 6.29]]
+        angles: []
+        angles2: []
